--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -599,6 +599,7 @@ a.button {
 
 /* Forms =====================================================================*/
 
+form#AddToCartForm,
 #ContactForm,
 #CommentForm form,
 #AddAddress form,
