--- a/snippets/theme-footer.liquid
+++ b/snippets/theme-footer.liquid
@@ -26,9 +26,9 @@
         {% endif %}
       </div>
       <div class="column l5 m12 s12 l-right m-middle">
-        <a href="http://shopify.com/timber" title="Concrete Shopify Theme Framework">Concrete</a>
+        <a href="https://github.com/Elkfox/Concrete" title="Concrete Shopify Theme Framework">Concrete</a>
         by <a href="https://elkfox.com?ref=Concrete" title="Elkfox.com">Elkfox</a>
-        {{ powered_by_link }}
+        {{ powered_by_link | replace:'shopify.com','shopify.com/?ref=elkfox' }}
       </div>
     </div>
   </div>
