--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -50,8 +50,8 @@
             {% endfor %}
           </select>
 
-          <span>{{ 'product.regular_price' | t }}</span>
-          <span id="ProductPrice" class="h2" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
+          <span class="hidden">{{ 'product.regular_price' | t }}</span>
+          <span id="ProductPrice" class="h2 clearfix" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
             {{ current_variant.price | money }}
           </span>
 
