--- a/templates/collection.list.liquid
+++ b/templates/collection.list.liquid
@@ -59,18 +59,19 @@
       <div class="column l10 m9 s8">
         <p class="h4">{{ product.title }}</p>
         <p>
+          <a href="{{ product.url | within: collection }}">{{ product.title }}</a><br>
           {% if on_sale %}
             {% if product.price_varies %}
               {% assign sale_price = product.price | money %}
               {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
             {% else %}
-              <strong>{{ 'products.product.on_sale' | t }}</strong>
+              <strong>{{ 'product.on_sale_html' | t: price: sale_price }}</strong>
               {{ product.price | money }}
             {% endif %}
           {% else %}
             {% if product.price_varies %}
               {% assign price = product.price | money %}
-              {{ 'products.general.from_text_html' | t: price: price }}
+              {{ 'product.priced_from_html' | t: price: price }}
             {% else %}
               {{ product.price | money }}
             {% endif %}
@@ -79,7 +80,8 @@
             <br><strong>{{ 'products.product.sold_out' | t }}</strong>
           {% endif %}
           {% if on_sale %}
-            <br><span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span><s>{{ product.compare_at_price | money }}</s>
+            <span class="hidden">{{ 'product.original_price' | t }}</span>
+            <s>{{ product.compare_at_price | money }}</s>
           {% endif %}
         </p>
         <div class="rte">
