--- a/snippets/theme-header.liquid
+++ b/snippets/theme-header.liquid
@@ -28,11 +28,10 @@
           <a href="/account">{{ 'account.title' | t }}</a>
         {% endif %}
 
-        <a href="/cart" id="CartLink" aria-controls="Cart" aria-expanded="false">
+        <a href="/cart" id="CartLink" aria-controls="Cart" aria-expanded="false" data-cart-view>
           {{ 'cart.title' | t }}
-          (<span id="CartCount">{{ cart.item_count }}</span>
-          {{ 'cart.count' | t: count: cart.item_count }}
-          <span id="CartTotal">{{ cart.total_price | money }}</span>)
+          { cart.item_count } { cart.item_count | pluralize "item" }
+          (<span id="CartTotal">{cart.total_price | money_with_currency}</span>)
         </a>
 
       </div>
