--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,7 +1,7 @@
 <!-- /templates/product.liquid -->
 
 <div class="container" itemscope itemtype="http://schema.org/Product">
-
+  {{ shop.money_format }}
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
   <meta itemprop="image" content="{{ product.featured_image.src | img_url: 'grande' }}">
   {% assign current_variant = product.selected_or_first_available_variant %}
@@ -63,9 +63,9 @@
           {% endif %}
 
           <label for="Quantity" class="clearfix">{{ 'product.quantity' | t }}</label>
-          <input type="number" id="Quantity" name="quantity" value="1" min="1" class="quantity-selector">
+          <input type="number" id="Quantity" name="quantity" value="1" min="1" class="quantity-selector" data-cart-quantity="1">
 
-          <button type="submit" name="add" id="AddToCart" class="btn">
+          <button type="submit" name="add" id="AddToCart" class="btn" data-cart-add="{{ product.variant.id }}">
             <span id="AddToCartText">{{ 'product.add_to_cart' | t }}</span>
           </button>
         </form>
@@ -115,12 +115,17 @@
 {% endcomment %}
 {{ 'option_selection.js' | shopify_asset_url | script_tag }}
 <script>
+
+  $("#Quantity").on("change", function() {
+    $("#AddToCart").attr("data-cart-quantity", $(this).val());
+  })
+
   var selectCallback = function(variant, selector) {
-    timber.productPage({
-      money_format: "{{ shop.money_format }}",
+    console.log("Switching variant: ", variant);
+    concrete.switchVariant({
+      moneyFormat: "{{ shop.money_format }}",
       variant: variant,
-      selector: selector
-    });
+    })
   };
 
   jQuery(function($) {
