--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -57,11 +57,16 @@ concrete.cacheSelectors = function () {
     $toggleItemLink : $('.js_toggle'),
     $revealItemLink : $('.js_open'),
     $hideItemLink : $('.js_close'),
+
+
     // Collection Pages
     $changeView              : $('.change-view'),
 
 
-    
+    // Product Page
+    $productImage            : $('#ProductPhotoImg'),
+    $thumbImages             : $('#ProductThumbs').find('a.product-single__thumbnail'),
+
     // Customer Pages
     $customerLoginForm       : $('#LoginForm'),
     $recoverPasswordLink     : $('#RecoverPasswordLink'),
@@ -74,9 +79,9 @@ concrete.cacheSelectors = function () {
 // Initialize the functions
 concrete.init = function () {
   concrete.cacheSelectors();
-
   concrete.visibilityManager();
 
+  concrete.productImageSwitch();
   concrete.responsiveVideos();
   concrete.collectionViews();
   concrete.loginForms();
@@ -85,6 +90,82 @@ concrete.init = function () {
 // Get current window location
 concrete.getHash = function () {
   return window.location.hash;
+};
+
+concrete.productPage = function (options) {
+  var moneyFormat = options.money_format,
+      variant = options.variant,
+      selector = options.selector;
+
+  // Selectors
+  var $productImage = $('#ProductPhotoImg'),
+      $addToCart = $('#AddToCart'),
+      $productPrice = $('#ProductPrice'),
+      $comparePrice = $('#ComparePrice'),
+      $quantityElements = $('.quantity-selector, label + .js-qty'),
+      $addToCartText = $('#AddToCartText');
+
+  if (variant) {
+
+    // Update variant image, if one is set
+    if (variant.featured_image) {
+      var newImg = variant.featured_image,
+          el = $productImage[0];
+      Shopify.Image.switchImage(newImg, el, concrete.switchImage);
+    }
+
+    // Select a valid variant if available
+    if (variant.available) {
+      // Available, enable the submit button, change text, show quantity elements
+      $addToCart.removeClass('disabled').prop('disabled', false);
+      $addToCartText.html({{ 'products.product.add_to_cart' | t | json }});
+      $quantityElements.show();
+    } else {
+      // Sold out, disable the submit button, change text, hide quantity elements
+      $addToCart.addClass('disabled').prop('disabled', true);
+      $addToCartText.html({{ 'products.product.sold_out' | t | json }});
+      $quantityElements.hide();
+    }
+
+    // Regardless of stock, update the product price
+    $productPrice.html( Shopify.formatMoney(variant.price, moneyFormat) );
+
+    // Also update and show the product's compare price if necessary
+    if (variant.compare_at_price > variant.price) {
+      $comparePrice
+        .html({{ 'products.product.compare_at' | t | json }} + ' ' + Shopify.formatMoney(variant.compare_at_price, moneyFormat))
+        .show();
+    } else {
+      $comparePrice.hide();
+    }
+
+  } else {
+    // The variant doesn't exist, disable submit button.
+    // This may be an error or notice that a specific variant is not available.
+    // To only show available variants, implement linked product options:
+    //   - http://docs.shopify.com/manual/configuration/store-customization/advanced-navigation/linked-product-options
+    $addToCart.addClass('disabled').prop('disabled', true);
+    $addToCartText.html({{ 'products.product.unavailable' | t | json }});
+    $quantityElements.hide();
+  }
+};
+
+concrete.productImageSwitch = function () {
+  if (concrete.cache.$thumbImages.length) {
+    // Switch the main image with one of the thumbnails
+    // Note: this does not change the variant selected, just the image
+    concrete.cache.$thumbImages.on('click', function(evt) {
+      evt.preventDefault();
+      var newImage = $(this).attr('href');
+      concrete.switchImage(newImage, null, concrete.cache.$productImage);
+    });
+  }
+};
+
+concrete.switchImage = function (src, imgObject, el) {
+  // Make sure element is a jquery object
+  var $el = $(el);
+  $el.attr('src', src);
 };
 
 // responsive Videos
