--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -23,14 +23,14 @@
         <div class="column l3 m3 s-hide">
           { item.price | money_with_currency}
         </div>
-        <div class="column l2 m2 s12 s-right">
+        <div class="column l2 m2 s6">
           <div class="quanity_adjust">
             <a class="adjust" id="minusOne" rv-data-cart-update="index | plus 1" rv-data-cart-quantity="item.quantity | minus 1">&#8722;</a>
             <span class="quantity">{ item.quantity }</span>
             <a class="adjust" id="plusOne" rv-data-cart-update="index | plus 1" rv-data-cart-quantity="item.quantity | plus 1">&#43;</a>
           </div>
         </div>
-        <div class="column l2 m2 s12 right">
+        <div class="column l2 m2 s6 right">
           { item.line_price | money_with_currency }
         </div>
       </div>
