--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -2,7 +2,7 @@
 
 {% paginate collection.products by 12 %}
 
-{% assign grid_item_width = 'column l4 m6 s12' %}
+{% assign column_width = 'column l4 m6 s12' %}
 
 <div class="container">
   <header>
@@ -42,7 +42,7 @@
 <div class="container">
   <div class="row">
     {% for product in collection.products %}
-      {% include 'product-grid-item' %}
+      {% include 'collection-product' %}
     {% else %}
       {% if collection.handle == 'all' and current_tags == '' %}
         {% unless emptyState %}
