--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,37 +1,23 @@
 <!-- /templates/list-collections.liquid -->
-{% comment %}
 
-  This page represents the /collections and /products pages.
-  It is an optional, but highly recommended, template for your theme.
-
-  More info:
-    - http://docs.shopify.com/manual/configuration/store-customization/taking-control-of-collections-listing
-
-{% endcomment %}
-
-{% include 'breadcrumb' %}
-
-{% comment %}
-  Loop through each collection, except 'frontpage'
-{% endcomment %}
 {% for collection in collections %}
 
   {% unless collection.handle == 'frontpage' %}
 
     {% capture collection_title %}{{ collection.title | escape }}{% endcapture %}
 
-    <div class="section-header">
+    <div class="container">
       <p class="h1 section-header__left">{{ collection_title }}</p>
-      <div class="section-header__right">
-        <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: collection_title }}">More {{ collection_title }} &rsaquo;</a>
-      </div>
+      <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: collection_title }}">More {{ collection_title }} &rsaquo;</a>
     </div>
 
-    <div class="grid-uniform">
-      {% for product in collection.products limit:5 %}
-        {% assign grid_item_width = 'large--one-fifth medium--one-half' %}
-        {% include 'product-grid-item' %}
-      {% endfor %}
+    <div class="container">
+      <div class="row">
+        {% for product in collection.products limit:4 %}
+          {% assign column_width = 'column l4 m6 s12' %}
+          {% include 'collection-product' %}
+        {% endfor %}
+      </div>
     </div>
 
     {% unless forloop.last %}<hr>{% endunless %}
